add name and phone input

--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@
         <div class="row section-header align-center">
             <div class="col-full">
                 <h1 class="display-1">
-                    Let's Stay In Touch.
+                    Join the waiting list
                 </h1>
                 <p class="lead">
-                Subscribe for updates, special offers, and other amazing stuff.
+                    Be among the first to receive the Alecko app by entering your name and number below.
                 </p>
             </div>
         </div> <!-- end section-header -->
@@ -387,8 +387,9 @@
             <div class="col-full footer__subscribe end">
                 <div class="subscribe-form">
                     <form id="mc-form" class="group" novalidate="true">
+                        <input type="text" value="" name="Name" class="input-name" id="mc-name" placeholder="Your Name" required="">
 
-                        <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email Address" required="">
+                        <input type="tel" value="" name="phone" class="phone" id="mc-phone" placeholder="Your Phone Number" required="">
             
                         <input type="submit" name="subscribe" value="Sign Up">
             
@@ -407,16 +408,15 @@
                 <h4>About The Developer</h4>
 
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed 
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                laboris nisi ut aliquip ex consectetur adipisicing elit do eiusmod tempor.
+                That's right, there's no company/cooperation or agency behind Alecko, just me 
+                and my laptop. My name is Immanuel Wandeto, and what I love is to 
+                solve problems using technology, If you think Alecko could be a good solution to growing your 
+                audience on instagram, your sign up would be appreciated.
                 </p>
 
                 <ul class="footer__social">
-                    <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                    <li><a href="#0"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="https://twitter.com/ManuelWandeto"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.instagram.com/immanuel_wandeto/"><i class="fab fa-instagram" aria-hidden="true"></i></a></li>
                 </ul>
             </div>
 
@@ -434,24 +434,18 @@
                     </div>
 
                     <div class="footer__contact col-seven mob-full">
-                        <h4>Contact Us.</h4>
+                        <h4>Contact Me.</h4>
 
                         <p>
-                        Phone: (+63) 555 1212 <br>
-                        Fax: (+63) 555 0100
+                        Phone: 0717171647 <br>
                         </p>
                         <p>
-                        Need help or have a question? Contact us at: <br>
-                        <a href="mailto:#0" class="footer__mail-link">support@kairos.com</a>
+                        Need help or have a question? Reach me at: <br>
+                        <a href="mailto:#0" class="footer__mail-link">immanuelmojo@hotmail.com</a>
                         </p>
                     </div>
 
                 </div>
-            </div>
-
-            <div class="col-full ss-copyright">
-                <span>&copy; Copyright Kairos 2018</span> 
-                <span>Design by <a href="https://www.styleshout.com/">styleshout</a></span>
             </div>
 
         </div> <!-- end footer__bottom -->
