--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
     <style>
-        .iti__flag {background-image: url("../images/flags.png");}
+        .iti__flag {background-image: url("./images/flags.png");}
         @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-        .iti__flag {background-image: url("../images/flags@2x.png");}
+        .iti__flag {background-image: url("./images/flags@2x.png");}
         }
         .iti__country-name {
             color: #282829;
@@ -385,7 +385,6 @@
         </div> <!-- end features -->
 
     </section> <!-- end s-features -->
-
    <!-- footer
     ================================================== -->
     <footer id="lead-capture" class="s-footer footer">
@@ -450,6 +449,10 @@
                             <li><a href="#home" class="smoothscroll">Intro</a></li>
                             <li><a href="#about" class="smoothscroll">About</a></li>
                             <li><a href="#features" class="smoothscroll">Features</a></li>
+                            <li>
+                                <a href="https://www.figma.com/file/i3GZLRVJSPXzGaBTCrGh9h/Alecko-mobile?node-id=0%3A1" target="_blank" 
+                                >Design file</a>
+                            </li>
                         </ul>
                     </div>
 
@@ -483,7 +486,7 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="./js/form.js"></script>
 
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
